# geodukt

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/geodukt-cli/: Cargo.toml
crates/geodukt-cli/src/: main.rs
crates/geodukt-core/: Cargo.toml
crates/geodukt-core/src/: cache.rs  cdc.rs  dag.rs  feature.rs  incremental.rs  lib.rs  lineage.rs  manifest.rs  pipeline.rs  quality.rs  scheduler.rs  schema.rs  streaming.rs  template.rs  testing.rs  visual.rs
crates/geodukt-io/: Cargo.toml
crates/geodukt-io/src/: cloud_io.rs  csv_io.rs  database_io.rs  docgen.rs  geojson_io.rs  geopackage_io.rs  lib.rs  shapefile_io.rs
crates/geodukt-io/tests/: cloud_tests.rs  docgen_tests.rs  geopackage_tests.rs
crates/geodukt-plugins/: Cargo.toml
crates/geodukt-plugins/src/: lib.rs
crates/geodukt-server/: Cargo.toml
crates/geodukt-server/src/: lib.rs
crates/geodukt-server/tests/: api_tests.rs
crates/geodukt-transforms/: Cargo.toml
crates/geodukt-transforms/src/: buffer.rs  centroid.rs  clip.rs  dissolve.rs  expression.rs  filter.rs  lib.rs  registry.rs  reproject.rs  schema.rs  simplify.rs  spatial_join.rs
docs/: index.html
