[package]
name = "geodukt-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
petgraph = "0.7"
geo = "0.29"
rayon = "1"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
