[package]
name = "geodukt-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
geodukt-core = { path = "../geodukt-core" }
geo = "0.29"
geojson = "0.24"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
flatgeobuf = "4"
geoparquet = { package = "parquet", version = "54", optional = true }
shapefile = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
tokio = { version = "1", features = ["rt"] }
bytes = "1"
futures = "0.3"

[features]
default = []
parquet = ["geoparquet"]
cloud = []

[dev-dependencies]
tempfile = "3"
