[package]
name = "geodukt-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
geodukt-core = { path = "../geodukt-core" }
geodukt-transforms = { path = "../geodukt-transforms" }
geodukt-io = { path = "../geodukt-io" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
